// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Sidebar component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <aside
        class="ps-sidebar-root css-1gjb6qj"
        data-testid="ps-sidebar-root-test-id"
        style="z-index: 100;"
        width="230px"
      >
        <div
          class="ps-sidebar-container css-1o85esu"
          data-testid="ps-sidebar-container-test-id"
        >
          <h3
            class="text-white bg-primary text-center p-2"
          >
            Algorithms
          </h3>
          <nav
            class="ps-menu-root css-vj11vy"
          >
            <ul
              class="css-ewdv3l"
            >
              <li
                class="ps-menuitem-root ps-submenu-root ps-open css-16jesut"
              >
                <a
                  class="ps-menu-button ps-open"
                  data-testid="ps-menu-button-test-id"
                  tabindex="0"
                >
                  <span
                    class="ps-menu-label ps-open css-12w9als"
                  >
                    Searching
                  </span>
                  <span
                    class="ps-submenu-expand-icon ps-open css-1cuxlhl"
                  >
                    <span
                      class="css-jn69v9"
                      open=""
                    />
                  </span>
                </a>
                <div
                  class="ps-submenu-content ps-open css-nx2aea"
                  data-testid="ps-submenu-content-test-id"
                  open=""
                >
                  <ul
                    class="css-ewdv3l"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/linear-search"
                    >
                      Linear Search
                    </a>
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/binary-search"
                    >
                      Binary Search
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="ps-menuitem-root ps-submenu-root css-16jesut"
              >
                <a
                  class="ps-menu-button"
                  data-testid="ps-menu-button-test-id"
                  tabindex="0"
                >
                  <span
                    class="ps-menu-label css-12w9als"
                  >
                    Sorting
                  </span>
                  <span
                    class="ps-submenu-expand-icon css-1cuxlhl"
                  >
                    <span
                      class="css-honxw6"
                    />
                  </span>
                </a>
                <div
                  class="ps-submenu-content css-18unl23"
                  data-testid="ps-submenu-content-test-id"
                >
                  <ul
                    class="css-ewdv3l"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/bubble-sort"
                    >
                      Bubble Sort
                    </a>
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/quick-sort"
                    >
                      Quick Sort
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="ps-menuitem-root ps-submenu-root css-16jesut"
              >
                <a
                  class="ps-menu-button"
                  data-testid="ps-menu-button-test-id"
                  tabindex="0"
                >
                  <span
                    class="ps-menu-label css-12w9als"
                  >
                    Binary Tree
                  </span>
                  <span
                    class="ps-submenu-expand-icon css-1cuxlhl"
                  >
                    <span
                      class="css-honxw6"
                    />
                  </span>
                </a>
                <div
                  class="ps-submenu-content css-18unl23"
                  data-testid="ps-submenu-content-test-id"
                >
                  <ul
                    class="css-ewdv3l"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/binary-tree"
                    >
                      BFS and DFS Traversal
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="ps-menuitem-root ps-submenu-root css-16jesut"
              >
                <a
                  class="ps-menu-button"
                  data-testid="ps-menu-button-test-id"
                  tabindex="0"
                >
                  <span
                    class="ps-menu-label css-12w9als"
                  >
                    Cryptography
                  </span>
                  <span
                    class="ps-submenu-expand-icon css-1cuxlhl"
                  >
                    <span
                      class="css-honxw6"
                    />
                  </span>
                </a>
                <div
                  class="ps-submenu-content css-18unl23"
                  data-testid="ps-submenu-content-test-id"
                >
                  <ul
                    class="css-ewdv3l"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/caesar-cipher"
                    >
                      Caesar Cipher
                    </a>
                  </ul>
                </div>
              </li>
              <li
                class="ps-menuitem-root ps-submenu-root css-16jesut"
              >
                <a
                  class="ps-menu-button"
                  data-testid="ps-menu-button-test-id"
                  tabindex="0"
                >
                  <span
                    class="ps-menu-label css-12w9als"
                  >
                    Computer Graphics
                  </span>
                  <span
                    class="ps-submenu-expand-icon css-1cuxlhl"
                  >
                    <span
                      class="css-honxw6"
                    />
                  </span>
                </a>
                <div
                  class="ps-submenu-content css-18unl23"
                  data-testid="ps-submenu-content-test-id"
                >
                  <ul
                    class="css-ewdv3l"
                  >
                    <a
                      class="d-block text-center p-1 text-decoration-none"
                      data-discover="true"
                      href="/flood-fill"
                    >
                      Flood Fill
                    </a>
                  </ul>
                </div>
              </li>
            </ul>
          </nav>
        </div>
      </aside>
    </div>
  </body>,
  "container": <div>
    <aside
      class="ps-sidebar-root css-1gjb6qj"
      data-testid="ps-sidebar-root-test-id"
      style="z-index: 100;"
      width="230px"
    >
      <div
        class="ps-sidebar-container css-1o85esu"
        data-testid="ps-sidebar-container-test-id"
      >
        <h3
          class="text-white bg-primary text-center p-2"
        >
          Algorithms
        </h3>
        <nav
          class="ps-menu-root css-vj11vy"
        >
          <ul
            class="css-ewdv3l"
          >
            <li
              class="ps-menuitem-root ps-submenu-root ps-open css-16jesut"
            >
              <a
                class="ps-menu-button ps-open"
                data-testid="ps-menu-button-test-id"
                tabindex="0"
              >
                <span
                  class="ps-menu-label ps-open css-12w9als"
                >
                  Searching
                </span>
                <span
                  class="ps-submenu-expand-icon ps-open css-1cuxlhl"
                >
                  <span
                    class="css-jn69v9"
                    open=""
                  />
                </span>
              </a>
              <div
                class="ps-submenu-content ps-open css-nx2aea"
                data-testid="ps-submenu-content-test-id"
                open=""
              >
                <ul
                  class="css-ewdv3l"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/linear-search"
                  >
                    Linear Search
                  </a>
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/binary-search"
                  >
                    Binary Search
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="ps-menuitem-root ps-submenu-root css-16jesut"
            >
              <a
                class="ps-menu-button"
                data-testid="ps-menu-button-test-id"
                tabindex="0"
              >
                <span
                  class="ps-menu-label css-12w9als"
                >
                  Sorting
                </span>
                <span
                  class="ps-submenu-expand-icon css-1cuxlhl"
                >
                  <span
                    class="css-honxw6"
                  />
                </span>
              </a>
              <div
                class="ps-submenu-content css-18unl23"
                data-testid="ps-submenu-content-test-id"
              >
                <ul
                  class="css-ewdv3l"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/bubble-sort"
                  >
                    Bubble Sort
                  </a>
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/quick-sort"
                  >
                    Quick Sort
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="ps-menuitem-root ps-submenu-root css-16jesut"
            >
              <a
                class="ps-menu-button"
                data-testid="ps-menu-button-test-id"
                tabindex="0"
              >
                <span
                  class="ps-menu-label css-12w9als"
                >
                  Binary Tree
                </span>
                <span
                  class="ps-submenu-expand-icon css-1cuxlhl"
                >
                  <span
                    class="css-honxw6"
                  />
                </span>
              </a>
              <div
                class="ps-submenu-content css-18unl23"
                data-testid="ps-submenu-content-test-id"
              >
                <ul
                  class="css-ewdv3l"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/binary-tree"
                  >
                    BFS and DFS Traversal
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="ps-menuitem-root ps-submenu-root css-16jesut"
            >
              <a
                class="ps-menu-button"
                data-testid="ps-menu-button-test-id"
                tabindex="0"
              >
                <span
                  class="ps-menu-label css-12w9als"
                >
                  Cryptography
                </span>
                <span
                  class="ps-submenu-expand-icon css-1cuxlhl"
                >
                  <span
                    class="css-honxw6"
                  />
                </span>
              </a>
              <div
                class="ps-submenu-content css-18unl23"
                data-testid="ps-submenu-content-test-id"
              >
                <ul
                  class="css-ewdv3l"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/caesar-cipher"
                  >
                    Caesar Cipher
                  </a>
                </ul>
              </div>
            </li>
            <li
              class="ps-menuitem-root ps-submenu-root css-16jesut"
            >
              <a
                class="ps-menu-button"
                data-testid="ps-menu-button-test-id"
                tabindex="0"
              >
                <span
                  class="ps-menu-label css-12w9als"
                >
                  Computer Graphics
                </span>
                <span
                  class="ps-submenu-expand-icon css-1cuxlhl"
                >
                  <span
                    class="css-honxw6"
                  />
                </span>
              </a>
              <div
                class="ps-submenu-content css-18unl23"
                data-testid="ps-submenu-content-test-id"
              >
                <ul
                  class="css-ewdv3l"
                >
                  <a
                    class="d-block text-center p-1 text-decoration-none"
                    data-discover="true"
                    href="/flood-fill"
                  >
                    Flood Fill
                  </a>
                </ul>
              </div>
            </li>
          </ul>
        </nav>
      </div>
    </aside>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render SubMenu component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="ps-menu-root css-vj11vy"
      >
        <ul
          class="css-ewdv3l"
        >
          <li
            class="ps-menuitem-root ps-submenu-root css-16jesut"
          >
            <a
              class="ps-menu-button"
              data-testid="ps-menu-button-test-id"
              tabindex="0"
            >
              <span
                class="ps-menu-label css-12w9als"
              >
                SubMenuTitle
              </span>
              <span
                class="ps-submenu-expand-icon css-1cuxlhl"
              >
                <span
                  class="css-honxw6"
                />
              </span>
            </a>
            <div
              class="ps-submenu-content css-18unl23"
              data-testid="ps-submenu-content-test-id"
            >
              <ul
                class="css-ewdv3l"
              >
                <a
                  class="d-block text-center p-1 text-decoration-none"
                  data-discover="true"
                  href="/"
                >
                  Title
                </a>
              </ul>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="ps-menu-root css-vj11vy"
    >
      <ul
        class="css-ewdv3l"
      >
        <li
          class="ps-menuitem-root ps-submenu-root css-16jesut"
        >
          <a
            class="ps-menu-button"
            data-testid="ps-menu-button-test-id"
            tabindex="0"
          >
            <span
              class="ps-menu-label css-12w9als"
            >
              SubMenuTitle
            </span>
            <span
              class="ps-submenu-expand-icon css-1cuxlhl"
            >
              <span
                class="css-honxw6"
              />
            </span>
          </a>
          <div
            class="ps-submenu-content css-18unl23"
            data-testid="ps-submenu-content-test-id"
          >
            <ul
              class="css-ewdv3l"
            >
              <a
                class="d-block text-center p-1 text-decoration-none"
                data-discover="true"
                href="/"
              >
                Title
              </a>
            </ul>
          </div>
        </li>
      </ul>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
